--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -53,6 +53,7 @@ html {
     --secondary-bg-color: rgb(244, 244, 244);
 
     --card-secondary-color: rgb(234, 234, 234);
+     --module-clr: rgb(34, 34, 34);
 
     --nav-button-color: rgb(212, 212, 212);
 
@@ -77,7 +78,7 @@ html {
     /* intro slider*/
 
     /*proposed book card*/
-    --book-card-width: calc(100dvw - 2rem);
+    --book-card-width: calc(100dvw - 4rem);
     --book-card-width-tablet:calc(50dvw - 1rem);
     --book-card-width-laptop:  calc(30dvw - 4rem);
 
