--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -2943,14 +2943,13 @@ body.team-page {
 }
 
 .person {
-  height: 65px;
-  width: 65px;
-  background-color: pink;
-  display: flex;
+  height: 100px;
+  width:100px;  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  flex: 0 0 65px;
+  flex: 0 0 100px;
+  overflow: hidden;
 }
 
 .person img {
